--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="./index.css">
+  <script type="module" src="./index.js" defer></script>
 </head>
 
 <body>
@@ -21,13 +22,16 @@
       close
     </button>
 
-    <div class="target" data-class="{'active': 'header.isNavMobileActive'}">
-      test
+    <div class="target" data-class='{"active": "header.isNavMobileActive", "active-not": "!header.isNavMobileActive"}'>
+      test data-class Object JSON
+    </div>
+
+    <div class="target"
+      data-class='["header.isNavMobileActive ? active : active-not", "!header.isNavMobileActive ? test-not : test"]'>
+      test data-class Array JSON
     </div>
 
   </header>
-
-  <script type="module" src="./index.js"></script>
 
 </body>
 
